# simuscop

./: CMakeLists.txt  README.md
configFiles/: config.txt  config_test_tumor.txt  config_test_wes.txt  config_test_wgs.txt  config_wes.txt  config_wgs.txt
lib/: CMakeLists.txt
lib/config/: Config.cpp  Config.h
lib/fastahack/: Fasta.cpp  Fasta.h
lib/genome/: Genome.cpp  Genome.h
lib/matrix/: Matrix.h
lib/model/: Profile.cpp
lib/mydefine/: MyDefine.cpp  MyDefine.h
lib/profile/: Profile.cpp  Profile.h
lib/psifunc/: psiFunc.cpp  psiFunc.h
lib/segment/: Segment.cpp  Segment.h
lib/seqwriter/: SeqWriter.cpp  SeqWriter.h
lib/snp/: snp.cpp  snp.h
lib/split/: split.cpp  split.h
lib/threadpool/: ThreadPool.cpp  ThreadPool.h
lib/vcfparser/: vcfparser.cpp  vcfparser.h
results/: test_1.000+normal_0.000.pileup_CNVs  test_1.000+normal_0.000_gatkmutect2.somatic.vcf
src/: seqToProfile.cpp  simuReads.cpp
testData/: Illumina_GenomeAnalyzerIIx.profile  Illumina_HiSeq2000.profile  Illumina_HiSeq2500.profile  Illumina_HiSeqXTen.profile  abundance_tumor.txt  exon_regions.bed  snp.txt  variations.txt  variations_tumor.txt
